--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -45,7 +45,7 @@
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-serif;
 
-@font-size-base:          17px;
+@font-size-base:          18px;
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
 @font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
 
@@ -306,17 +306,17 @@
 //## Define the maximum width of `.container` for different screen sizes.
 
 // Small screen / tablet
-@container-tablet:             ((700px + @grid-gutter-width)); //720px
+@container-tablet:             ((600px + @grid-gutter-width)); //720px
 //** For `@screen-sm-min` and up.
 @container-sm:                 @container-tablet;
 
 // Medium screen / desktop
-@container-desktop:            ((700px + @grid-gutter-width)); //940px
+@container-desktop:            ((600px + @grid-gutter-width)); //940px
 //** For `@screen-md-min` and up.
 @container-md:                 @container-desktop;
 
 // Large screen / wide desktop
-@container-large-desktop:      ((800px + @grid-gutter-width)); //1140px
+@container-large-desktop:      ((600px + @grid-gutter-width)); //1140px
 //** For `@screen-lg-min` and up.
 @container-lg:                 @container-large-desktop;
 
